# ic10-emulator

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
app/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.svelte
app/src/components/: AtmosphericNetworkInspector.svelte  CableNetworkInspector.svelte  ConfigPopup.svelte  ConnectionLine.svelte  Connector.svelte  ContextMenu.svelte  DeviceInspector.svelte  DeviceList.svelte  DeviceNode.svelte  Grid.svelte  IC10Debugger.svelte  InspectorWindow.svelte  NetworkNode.svelte  Node.svelte  (+2 more)
src/: animation_curve.rs  cable_network.rs  chip.rs  constants.rs  conversions.rs  error.rs  id.rs  instruction.rs  lib.rs  logic.rs  main.rs  network.rs  parser.rs  simulation_manager.rs  types.rs  wasm.rs
src/atmospherics/: chemistry.rs  gas_mixture.rs  gas_type.rs  mod.rs  mole.rs
src/devices/: active_vent.rs  air_conditioner.rs  atmospheric_device.rs  chip_slot.rs  daylight_sensor.rs  device_factory.rs  filtration.rs  ic_housing.rs  logic_memory.rs  mod.rs  passive_vent.rs  property_descriptor.rs  volume_pump.rs
src/items/: filter.rs  item.rs  item_factory.rs  item_integrated_circuit_10.rs  mod.rs
src/networks/: atmospheric_network.rs  cable_network.rs  mod.rs
src/tests/: animation_curve_tests.rs  atmospheric_network_tests.rs  atmospherics_tests.rs  cable_network_tests.rs  conversions_tests.rs  instruction_parse_tests.rs  logic_tests.rs  mod.rs  mode_tests.rs  network_tests.rs  parser_tests.rs  simulation_manager.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+6 files in other folders)
