[package]
name = "ic10-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
crc = "3.4.0"
rand = "0.9.2"
regex = "1.12.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["wasm-bindgen"]

[lib]
name = "ic10_emulator_lib"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
